--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -8,9 +8,9 @@ map $real_proto $fastcgi_https {
     default "off";
 }
 
-add_header X-App-Request-Time $request_time always;
-add_header X-App-Upstream-Time $upstream_header_time always;
-add_header X-App-Request-ID $request_id always;
+# add_header X-App-Request-Time $request_time always;
+# add_header X-App-Upstream-Time $upstream_header_time always;
+# add_header X-App-Request-ID $request_id always;
 
 server {
     listen 80;
