--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,8 @@ services:
           exit 1
         fi
 
-        php artisan config:cache \
+        php artisan cache:clear \
+            && artisan config:cache \
             && php artisan route:cache \
             && php artisan view:cache \
             && /start.sh
