docs: more simple documentation

--- a/.env.example
+++ b/.env.example
@@ -22,10 +22,10 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
-DB_PORT=33061
-DB_DATABASE=kuliah_gunaulang
+DB_PORT=3306
+DB_DATABASE=gunaulang
 DB_USERNAME=root
-DB_PASSWORD=123
+DB_PASSWORD=HaloPassword138
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
